@@ -2,6 +2,7 @@ package am.techshop.wishlist.service;
 
 import am.techshop.common.dto.response.ApiResponse;
 import am.techshop.common.dto.response.ProductResponse;
+import am.techshop.common.dto.response.WishlistItemResponse;
 import am.techshop.common.dto.response.WishlistResponse;
 import am.techshop.common.exception.TechShopException;
 import am.techshop.wishlist.client.ProductClient;
@@ -10,14 +11,20 @@ import am.techshop.wishlist.entity.WishlistItem;
 import am.techshop.wishlist.mapper.WishlistMapper;
 import am.techshop.wishlist.repository.WishlistRepository;
 import am.techshop.wishlist.service.impl.WishlistServiceImpl;
+import feign.FeignException;
+import feign.Request;
+import feign.Response;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.dao.DataIntegrityViolationException;
 
 import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -51,11 +58,16 @@ class WishlistServiceImplTest {
 
     @Test
     void addToWishlist_WhenWishlistExistsAndProductIsNew_AddsItem() {
-        Wishlist wishlist = Wishlist.builder().id(1L).userId(USER_ID).build();
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
         ProductResponse product = new ProductResponse(PRODUCT_ID, "Phone", "Desc", BigDecimal.valueOf(100), 10, "Phones", null, false, null);
+        WishlistItem newItem = new WishlistItem();
+        newItem.setProductId(PRODUCT_ID);
 
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
         when(productClient.getProduct(PRODUCT_ID)).thenReturn(new ApiResponse<>(true, "Success", product));
+        when(wishlistMapper.toItem(PRODUCT_ID)).thenReturn(newItem);
         when(wishlistRepository.save(any(Wishlist.class))).thenAnswer(inv -> inv.getArgument(0));
         when(wishlistMapper.toResponse(eq(wishlist), any()))
                 .thenReturn(new WishlistResponse(1L, USER_ID, List.of(), null));
@@ -64,13 +76,20 @@ class WishlistServiceImplTest {
 
         assertNotNull(result);
         assertEquals(1, wishlist.getItems().size());
-        assertEquals(PRODUCT_ID, wishlist.getItems().get(0).getProductId());
+        assertEquals(PRODUCT_ID, wishlist.getItems().getFirst().getProductId());
         verify(wishlistRepository).save(wishlist);
     }
 
     @Test
     void addToWishlist_WhenWishlistDoesNotExist_CreatesItFirst() {
+        Wishlist newWishlist = new Wishlist();
+        newWishlist.setUserId(USER_ID);
+        WishlistItem newItem = new WishlistItem();
+        newItem.setProductId(PRODUCT_ID);
+
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.empty());
+        when(wishlistMapper.toEntity(USER_ID)).thenReturn(newWishlist);
+        when(wishlistMapper.toItem(PRODUCT_ID)).thenReturn(newItem);
         when(wishlistRepository.save(any(Wishlist.class))).thenAnswer(inv -> inv.getArgument(0));
 
         ProductResponse product = new ProductResponse(PRODUCT_ID, "Phone", "Desc", BigDecimal.valueOf(100), 10, "Phones", null, false, null);
@@ -85,9 +104,30 @@ class WishlistServiceImplTest {
     }
 
     @Test
+    void addToWishlist_WhenWishlistDoesNotExistAndConcurrentInsertRaces_ThrowsConflict() {
+        WishlistItem newItem = new WishlistItem();
+        newItem.setProductId(PRODUCT_ID);
+
+        when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.empty());
+        when(wishlistMapper.toEntity(USER_ID)).thenReturn(new Wishlist());
+        when(wishlistRepository.save(any(Wishlist.class)))
+                .thenThrow(new DataIntegrityViolationException("uk_wishlist_user"));
+
+        TechShopException ex = assertThrows(TechShopException.class,
+                () -> wishlistService.addToWishlist(USER_ID, PRODUCT_ID));
+
+        assertEquals(409, ex.getStatusCode());
+        verify(productClient, never()).getProduct(any());
+    }
+
+    @Test
     void addToWishlist_WhenAlreadyExists_ThrowsConflict() {
-        Wishlist wishlist = Wishlist.builder().id(1L).userId(USER_ID).build();
-        wishlist.addItem(WishlistItem.builder().productId(PRODUCT_ID).build());
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
+        WishlistItem item = new WishlistItem();
+        item.setProductId(PRODUCT_ID);
+        wishlist.addItem(item);
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
 
         TechShopException ex = assertThrows(TechShopException.class,
@@ -100,7 +140,9 @@ class WishlistServiceImplTest {
 
     @Test
     void addToWishlist_WhenProductNotFound_ThrowsNotFound() {
-        Wishlist wishlist = Wishlist.builder().id(1L).userId(USER_ID).build();
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
         when(productClient.getProduct(PRODUCT_ID)).thenReturn(new ApiResponse<>(false, "Not found", null));
 
@@ -112,12 +154,17 @@ class WishlistServiceImplTest {
 
     @Test
     void getWishlist_WhenExists_ReturnsMappedWishlist() {
-        Wishlist wishlist = Wishlist.builder().id(1L).userId(USER_ID).build();
-        wishlist.addItem(WishlistItem.builder().id(1L).productId(PRODUCT_ID).build());
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
+        WishlistItem item = new WishlistItem();
+        item.setId(1L);
+        item.setProductId(PRODUCT_ID);
+        wishlist.addItem(item);
         ProductResponse product = new ProductResponse(PRODUCT_ID, "Phone", "Desc", BigDecimal.valueOf(100), 10, "Phones", null, false, null);
 
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
-        when(productClient.getProduct(PRODUCT_ID)).thenReturn(new ApiResponse<>(true, "Success", product));
+        when(productClient.getProducts(List.of(PRODUCT_ID))).thenReturn(new ApiResponse<>(true, "Success", List.of(product)));
         when(wishlistMapper.toResponse(eq(wishlist), any()))
                 .thenReturn(new WishlistResponse(1L, USER_ID, List.of(), wishlist.getCreatedAt()));
 
@@ -125,6 +172,56 @@ class WishlistServiceImplTest {
 
         assertNotNull(result);
         assertEquals(USER_ID, result.userId());
+    }
+
+    @Test
+    void getWishlist_WhenProductMissingFromBatchResponse_ReturnsNullProductForThatItem() {
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
+        WishlistItem item = new WishlistItem();
+        item.setId(1L);
+        item.setProductId(PRODUCT_ID);
+        wishlist.addItem(item);
+
+        when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
+        when(productClient.getProducts(List.of(PRODUCT_ID))).thenReturn(new ApiResponse<>(true, "Success", List.of()));
+        when(wishlistMapper.toItemResponse(item, null))
+                .thenReturn(new WishlistItemResponse(1L, null, null));
+        when(wishlistMapper.toResponse(eq(wishlist), any()))
+                .thenReturn(new WishlistResponse(1L, USER_ID, List.of(), wishlist.getCreatedAt()));
+
+        WishlistResponse result = wishlistService.getWishlist(USER_ID);
+
+        assertNotNull(result);
+        verify(wishlistMapper).toItemResponse(item, null);
+    }
+
+    @Test
+    void getWishlist_WhenProductServiceUnavailable_ReturnsNullProductsWithoutThrowing() {
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
+        WishlistItem item = new WishlistItem();
+        item.setId(1L);
+        item.setProductId(PRODUCT_ID);
+        wishlist.addItem(item);
+
+        when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
+        Request request = Request.create(Request.HttpMethod.GET, "/api/products/batch",
+                Map.of(), null, StandardCharsets.UTF_8, null);
+        Response response = Response.builder().status(503).reason("Unavailable").request(request).build();
+        when(productClient.getProducts(List.of(PRODUCT_ID)))
+                .thenThrow(FeignException.errorStatus("ProductClient#getProducts", response));
+        when(wishlistMapper.toItemResponse(item, null))
+                .thenReturn(new WishlistItemResponse(1L, null, null));
+        when(wishlistMapper.toResponse(eq(wishlist), any()))
+                .thenReturn(new WishlistResponse(1L, USER_ID, List.of(), wishlist.getCreatedAt()));
+
+        WishlistResponse result = wishlistService.getWishlist(USER_ID);
+
+        assertNotNull(result);
+        verify(wishlistMapper).toItemResponse(item, null);
     }
 
     @Test
@@ -139,6 +236,15 @@ class WishlistServiceImplTest {
     }
 
     @Test
+    void getSubscriberUserIds_ReturnsUserIdsFromRepository() {
+        when(wishlistRepository.findUserIdsByProductId(PRODUCT_ID)).thenReturn(List.of(1L, 2L, 3L));
+
+        List<Long> result = wishlistService.getSubscriberUserIds(PRODUCT_ID);
+
+        assertEquals(List.of(1L, 2L, 3L), result);
+    }
+
+    @Test
     void getWishlistCount_ReturnsCount() {
         when(wishlistRepository.countItemsByUserId(USER_ID)).thenReturn(3L);
 
@@ -149,8 +255,12 @@ class WishlistServiceImplTest {
 
     @Test
     void removeFromWishlist_WhenExists_RemovesItem() {
-        Wishlist wishlist = Wishlist.builder().id(1L).userId(USER_ID).build();
-        wishlist.addItem(WishlistItem.builder().productId(PRODUCT_ID).build());
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
+        WishlistItem item = new WishlistItem();
+        item.setProductId(PRODUCT_ID);
+        wishlist.addItem(item);
 
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
         when(wishlistRepository.save(any(Wishlist.class))).thenAnswer(inv -> inv.getArgument(0));
@@ -176,7 +286,9 @@ class WishlistServiceImplTest {
 
     @Test
     void removeFromWishlist_WhenProductNotInWishlist_ThrowsException() {
-        Wishlist wishlist = Wishlist.builder().id(1L).userId(USER_ID).build();
+        Wishlist wishlist = new Wishlist();
+        wishlist.setId(1L);
+        wishlist.setUserId(USER_ID);
         when(wishlistRepository.findByUserId(USER_ID)).thenReturn(Optional.of(wishlist));
 
         TechShopException ex = assertThrows(TechShopException.class,
